# xhb

./: .gitignore  BuildData.hs  CHANGES  CONTRIBUTORS  DTDtoHask.hs  Demo.hs  FromXML.hs  Generate.hs  HaskellCombinators.hs  LICENSE  Pretty.hs  Proto.hs  README  README.md  Shared.hs  SmokeTest.hs  TODO  Test.hs  Test3.hs  Types.hs  XCB.hs  autopatch.sh  cabalize.sh  clean.sh  generate.sh  makepatch.sh  makeprotopatch.sh  parse.sh  patch  protodefs.sh  shared.sh  testgen.sh  version.sh  xmlpatch
Control/Monad/: Maybe.hs  RW.hs
Examples/: GenerateTest.hs  ParseTest.hs
Generate/: Build.hs  Extensions.hs  Facts.hs  Functions.hs  Monad.hs  Types.hs  Util.hs
Graphics/: XHB.hs
Graphics/XHB/: Connection.hs  Shared.hs
Graphics/XHB/Connection/: Auth.hs  Extension.hs  Internal.hs  Open.hs  Types.hs
Scripts/: Cabal.hs  Generate.hs  Parse.hs  ParseTest.hs
Templates/: cabal.template
XCB/: FromXML.hs  Pretty.hs  Shared.hs  Types.hs  Utils.hs
XHB/: Connection.hs  Shared.hs
XHB/Connection/: Extension.hs  Internal.hs  Open.hs  Types.hs
build-utils/: Cabal.hs  LICENSE  xcb-build-utils.cabal
build-utils/src/: Generate.hs  HaskellCombinators.hs
build-utils/src/Generate/: Functions.hs  Monad.hs  Util.hs
templates/: Import.st  ImportRel.st  Proto.st  StructGroup.stg  XidDeclare.st
