Name:                xcb-build-utils
Version:             0.1
Synopsis:            executables for building xhb
Homepage:            http://community.haskell.org/~aslatter/code/xhb/
License:             BSD3
License-file:        LICENSE
Author:              Antoine Latter
Maintainer:          aslatter@gmail.com
Build-type:          Simple
Cabal-version:       >=1.2


Executable xcb-build-generate
  Main-Is: Build.hs
  Build-Depends: base, directory == 1.1.*, haskell-src == 1.0.*, filepath == 1.2.*,
                 xcb-types == 0.6.*, mtl == 2.0.*, containers == 0.4.*,
                 transformers == 0.2.*
  hs-source-dirs: src, .

Executable xcb-build-cabal
  Main-Is: Cabal.hs
  Build-Depends: base, xcb-types == 0.6.*, transformers == 0.2.*, mtl == 2.0.*,
                 haskell-src == 1.0.*, containers == 0.4.*, time == 1.2.*,
                 filepath == 1.2.*, old-locale == 1.0.*, HStringTemplate == 0.6.*
  hs-source-dirs: src, .

Executable xcb-build-parse
  Main-Is: Parse.hs
  Build-Depends: base, filepath == 1.2.*, xcb-types == 0.6.*
  hs-source-dirs: src, .
