Name:                xcb-build-utils
Version:             0.1
Synopsis:            executables for building xhb
Homepage:            http://community.haskell.org/~aslatter/code/xhb/
License:             BSD3
License-file:        LICENSE
Author:              Antoine Latter
Maintainer:          aslatter@gmail.com
Build-type:          Simple
Cabal-version:       >=1.2


Executable xcb-build-generate
  Main-Is: Build.hs
  Build-Depends: base,
                 directory == 1.1.* || == 1.2.*,
                 haskell-src == 1.0.*,
                 filepath == 1.2.* || == 1.3.*,
                 xcb-types >= 0.6.1 && < 0.7,
                 mtl == 2.0.* || == 2.1.*,
                 containers == 0.4.* || == 0.5.*,
                 transformers == 0.2.* || == 0.3.*
  hs-source-dirs: src, .

Executable xcb-build-cabal
  Main-Is: Cabal.hs
  Build-Depends: base,
                 xcb-types >= 0.6.1 && < 0.7,
                 transformers == 0.2.* || == 0.3.*,
                 mtl == 2.0.* || == 2.1.*,
                 haskell-src == 1.0.*,
                 containers == 0.4.* || == 0.5.*,
                 time >= 1.2 && < 1.5,
                 filepath == 1.2.* || == 1.3.*,
                 old-locale == 1.0.*,
                 HStringTemplate == 0.7.*
  hs-source-dirs: src, .

Executable xcb-build-parse
  Main-Is: Parse.hs
  Build-Depends: base,
                 filepath == 1.2.* || == 1.3.*,
                 xcb-types >= 0.6.1 && < 0.7
  hs-source-dirs: src, .
